# pywithrottle

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  README.md  catalog-info.yaml  mkdocs.yml  poetry.lock.license  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: licensing.yaml  pylint.yaml
docs/: api.md  index.md
pywithrottle/: __init__.py  pywithrottle.py
tests/: test_module_initialisation.py
