# SPDX-FileCopyrightText: 2022 Matthew Macdonald-Wallace <matt@doics.co>
#
# SPDX-License-Identifier: MIT-Modern-Variant

[tool.poetry]
name = "pywithrottle"
version = "0.1.0"
description = "A library to interface with JMRI's WiThrottle Protocol"
authors = ["Matthew Macdonald-Wallace <matt@doics.co>"]
license = "MIT"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.0"
poetry-dynamic-versioning = "^0.14.1"
pytest-cov = "^3.0.0"
mkdocstrings = "^0.18.1"
mkdocs-material = "^8.2.11"
flake8 = "^4.0.1"
reuse = "^0.14.0"
prettyprint = "^0.1.5"
"stomp.py" = "^8.0.1"
Jinja2 = "3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
